--- a/index.ipynb
+++ b/index.ipynb
@@ -486,7 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def high_rating(restaurant, rating):\n",
+    "def high_rating(restaurant, alternat):\n",
     "    if restaurant['rating']>= rating:\n",
     "        return True\n",
     "    return False\n",
