--- a/index.ipynb
+++ b/index.ipynb
@@ -487,7 +487,7 @@
    "outputs": [],
    "source": [
     "def high_rating(restaurant, alternative):\n",
-    "    if restaurant['rating']>= rating:\n",
+    "    if restaurant['rating']>= restaurant['rating']:\n",
     "        return True\n",
     "    return False\n",
     "    pass"
